Add Authorize.net payment integration with recurring subscriptions
Replace Paddle with Authorize.net payment processor, implementing a complete subscription system with ARB (Automated Recurring Billing).

Features:
- Premium monthly subscriptions ($10/month) with automatic recurring billing
- Subscription management (create, cancel)
- One-time payments for events and courses
- Admin dashboard with event management
- Payment webhooks for transaction notifications
- Database schema updates for subscription tracking
- Reusable PaymentForm component

Tech stack:
- Authorize.net SDK for payment processing
- Drizzle ORM for database operations
- Lucia auth session management
- SvelteKit forms and API routes

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,9 @@ DATABASE_URL=your_postgresql_connection_string
 STRAPI_URL=http://localhost:1337
 STRAPI_API_TOKEN=your_strapi_api_token_here
 
-# Paddle Payments
-PUBLIC_PADDLE_ENV=sandbox
-PUBLIC_PADDLE_CLIENT_TOKEN=your_paddle_client_token
-PADDLE_WEBHOOK_SECRET=your_paddle_webhook_secret
-PADDLE_PRICE_SIMPLE=your_paddle_price_id
+# Authorize.net Payments
+AUTHNET_API_LOGIN_ID=your_api_login_id
+AUTHNET_TRANSACTION_KEY=your_transaction_key
+AUTHNET_ENVIRONMENT=sandbox
+AUTHNET_PUBLIC_CLIENT_KEY=your_public_client_key
+AUTHNET_SIGNATURE_KEY=your_signature_key
