Migrate to Payload CMS v3 and redesign article pages
Major Changes:
- Complete migration from Strapi to Payload CMS v3
- Restructured CMS with new collections: Posts, Authors, Tags, Media, Users
- Implemented role-based access control with admin, editor, and writer roles
- Added editor notes system for collaborative content workflow

Frontend Improvements:
- Redesigned article pages with modern dark theme and orange accents
- Improved typography for optimal readability (680px max width, 1.7 line height)
- Added interactive table of contents with scroll spy
- Implemented social share buttons (Twitter, Facebook, Copy Link)
- Added smooth scroll behavior with proper heading anchors
- Created author profile pages with article listings

API & Data Layer:
- Replaced Strapi client with Payload API client using bracket notation
- Fixed article routing issues with proper query parameter formatting
- Added relationship depth handling for authors, tags, and media
- Implemented premium content access control with 30-day free period

Card Features:
- Enhanced card hover tooltips with improved positioning
- Added card reference system for in-article card mentions
- Implemented mobile-friendly card modals

UI/UX Enhancements:
- Consistent orange accent color scheme across all components
- Minimal and accessible sidebar navigation
- Responsive design improvements for mobile and desktop
- Better visual hierarchy with improved spacing and typography

--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@flesh-and-blood/cards": "^3.6.158",
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"authorizenet": "^1.0.10",
 		"bcryptjs": "^3.0.2",
 		"dotenv": "^17.2.2",
+		"fab-cards": "^8.0.147",
 		"oslo": "^1.2.1",
 		"postgres": "^3.4.5"
 	}
