--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Database
 DATABASE_URL=your_postgresql_connection_string
 
-# Strapi CMS
-STRAPI_URL=http://localhost:1337
-STRAPI_API_TOKEN=your_strapi_api_token_here
+# Payload CMS
+PAYLOAD_URL=http://localhost:3000
+PAYLOAD_SECRET=your_payload_secret_key_here
 
 # Authorize.net Payments
 AUTHNET_API_LOGIN_ID=your_api_login_id
