--- a/cms/package.json
+++ b/cms/package.json
@@ -18,8 +18,10 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "3.64.0",
     "@payloadcms/next": "3.64.0",
     "@payloadcms/richtext-lexical": "3.64.0",
+    "@payloadcms/storage-s3": "^3.64.0",
     "@payloadcms/ui": "3.64.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
@@ -28,8 +30,7 @@
     "payload": "3.64.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.34.2",
-    "@payloadcms/db-postgres": "3.64.0"
+    "sharp": "0.34.2"
   },
   "devDependencies": {
     "@playwright/test": "1.56.1",
