Add password reset flow and change password functionality
- Add password reset token table to database schema
- Create forgot-password page with email form and server action
- Create reset-password page with token validation
- Add Resend email service integration for sending reset emails
- Add change password form to account page Basic Info tab
- Update login page with forgot password link and success message
- Make auth pages (login, signup, forgot/reset password) standalone without sidebar
- Fix accessibility warnings in article listing page

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ AUTHNET_TRANSACTION_KEY=your_transaction_key
 AUTHNET_ENVIRONMENT=sandbox
 AUTHNET_PUBLIC_CLIENT_KEY=your_public_client_key
 AUTHNET_SIGNATURE_KEY=your_signature_key
+
+# Email (Resend)
+RESEND_API_KEY=your_resend_api_key
+EMAIL_FROM=Arcane Games <noreply@arcanegamesandevents.com>
