--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"dotenv": "^17.2.2",
 		"fab-cards": "^8.0.147",
 		"oslo": "^1.2.1",
-		"postgres": "^3.4.5"
+		"postgres": "^3.4.5",
+		"resend": "^6.5.2"
 	}
 }
