Redesign admin dashboard with mobile-responsive sidebar navigation
- Add collapsible sidebar navigation with gradient styling and icons
- Implement mobile hamburger menu with slide-in drawer animation
- Add dark overlay when sidebar is open on mobile
- Enhance stat cards with gradients, glow effects, and hover animations
- Update event management page with improved UI consistency
- Add AGE Open page with FAB TCG event finder integration
- Create CircuitMap component with Leaflet for event visualization
- Add event closeout and decklist management pages
- Rename /play routes to /age-open for better clarity
- Update schema with decklists support

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
 		"bcryptjs": "^3.0.2",
 		"dotenv": "^17.2.2",
 		"fab-cards": "^8.0.147",
+		"leaflet": "^1.9.4",
 		"oslo": "^1.2.1",
+		"playwright": "^1.57.0",
 		"postgres": "^3.4.5",
 		"resend": "^6.5.2"
 	}
